--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
 </head>
-<body>
+<body align="center" bgcolor="#3B5998">
 
 <section>
 	<div id="container">
+	<h4 id="login-title">Facebook</h4>
 		<form class="formulario-login">
 			<div>
 			<label for="email"><strong>Usuario</strong></label><br>
